[gd_scene load_steps=4 format=3 uid="uid://dd7ne0vnk7lh7"]

[ext_resource type="Texture2D" uid="uid://h3udoxqqu1wd" path="res://Objects/UI/RoundButton/round_button.png" id="1_ck00n"]
[ext_resource type="Script" path="res://Scripts/System/round_button.gd" id="2_h7tp8"]

[sub_resource type="LabelSettings" id="LabelSettings_0kr68"]
font_size = 10
font_color = Color(0, 0, 0, 1)

[node name="RoundButton" type="TextureRect"]
offset_left = 1.0
offset_right = 101.0
offset_bottom = 100.0
texture = ExtResource("1_ck00n")
expand_mode = 1
script = ExtResource("2_h7tp8")

[node name="Button" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Skill Button"
label_settings = SubResource("LabelSettings_0kr68")

[connection signal="button_down" from="Button" to="." method="_on_button_button_down"]
[connection signal="button_up" from="Button" to="." method="_on_button_button_up"]
[connection signal="mouse_entered" from="Button" to="." method="_on_button_mouse_entered"]
[connection signal="mouse_exited" from="Button" to="." method="_on_button_mouse_exited"]
